--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Hello, world! I'm Peter White
 description: I'm a backend developer from London with an interest in Python
 permalink: ':title/'
-baseurl: "/blog" 
+baseurl: "https://github.com/PeterGSWhite/PeterGSWhite.github.io/blog" 
 url: "https://github.com/PeterGSWhite/PeterGSWhite.github.io/"
 # site-twitter:
 
